Fix SearchForm behavior for 1 character input length. Add backdrop horizontal center alignment. Set ".npmrc" registry value to npm registry. Disable hover on movies list cards for mobile. Fix movie details rating text alignment for mobile. Increase movie details sections opacity.

--- a/src/app/components/layout/Backdrop/Backdrop.scss
+++ b/src/app/components/layout/Backdrop/Backdrop.scss
@@ -1,9 +1,10 @@
 .layout {
   .backdrop {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: -1;
     background-size: cover;
+    background-position-x: center;
 
     &--main {
       z-index: -2;
