--- a/src/app/components/markup/Section/Section.scss
+++ b/src/app/components/markup/Section/Section.scss
@@ -11,7 +11,7 @@ $b: 'page-content';
 
   &__section--is-transparent {
     color: $white_mod;
-    background-color: rgba(0, 0, 0, 0.55);
+    background-color: rgba(0, 0, 0, 0.4);
   }
 
   hr {
