--- a/src/app/components/pages/movies-page/ToolbarBlock/ToolbarBlock.scss
+++ b/src/app/components/pages/movies-page/ToolbarBlock/ToolbarBlock.scss
@@ -28,7 +28,7 @@ $border-color: $black-btn-border;
 
     @media (max-width: 576px) {
       font-size: 14px;
-      padding: 3px;
+      padding: 4px;
       word-break: break-word;
     }
 
